@@ -1,5 +1,11 @@
 1998-12-03  Katsumi Yamaoka   <yamaoka@jpl.org>
 
+	* mime-edit.el (mime-edit-user-agent-value): Include
+	`xemacs-betaname'.
+
+
+1998-12-03  Katsumi Yamaoka   <yamaoka@jpl.org>
+
 	* WEMI: Version 1.12.0 (Shimizu) released.
 
 1998-11-30  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
